--- a/css/_global.scss
+++ b/css/_global.scss
@@ -18,7 +18,7 @@ a {
   text-decoration: none;
 }
 p {
-  padding: 0 0;
+  padding: 0 15px;
   margin: 15px auto;
   font-size: 1.2em;
 }
@@ -60,7 +60,7 @@ img {
   margin-bottom: 5px;
 }
 .title2 {
-  font-size: 24px;
+  font-size: 1.5em;
   margin: 20px 0;
   text-align: center;
 }
@@ -72,6 +72,6 @@ img {
 .info {
   text-align: center;
   margin: 16px 0;
-  font-size: 18px;
+  font-size: 1.2em;
   font-family: "Libre Caslon Display", serif;
 }
