--- a/css/style.scss
+++ b/css/style.scss
@@ -16,12 +16,32 @@
   justify-content: center;
   position: relative;
 }
+.header__wrapper-menu {
+  display: block;
+}
+.header__wrapper-mobile_menu,
+.mobile_menu {
+  display: none;
+}
+.header__wrapper-mobile_menu {
+  display: none;
+  background: url("../images/icon-menu.png") no-repeat;
+  background-size: 85%;
+  cursor: pointer;
+  min-width: 40px;
+  min-height: 40px;
+  &:hover {
+    transform: rotate(90deg);
+    transition: 500ms ease-in-out;
+  }
+}
 .header__wrapper {
   &-logo {
     width: 270px;
     text-align: left;
     margin-left: 0;
     margin-right: auto;
+    display: block;
     img {
       display: block;
       max-width: 270px;
@@ -48,7 +68,7 @@
   }
   &-callback {
     margin-left: 25px;
-    font-size: 14px;
+    font-size: 1.1em;
     .header-top-btn {
       max-width: 250px;
       min-width: 130px;
@@ -73,7 +93,7 @@
       }
     }
     .phone-number {
-      font-size: 22px;
+      font-size: 1.4em;
     }
   }
 }
@@ -90,14 +110,14 @@
   padding: 20px;
   text-align: center;
   &-title {
-    font-size: 38px;
+    font-size: 2.3em;
     margin-top: 20px;
     margin-bottom: 5px;
     color: white;
   }
   &-subtitle {
     color: white;
-    font-size: 30px;
+    font-size: 1.6em;
     margin-bottom: 10px;
     padding-bottom: 10px;
     line-height: 120%;
@@ -105,10 +125,10 @@
   &-callback {
     margin-bottom: 10px;
     .header-bottom-btn {
-      font-size: 20px;
+      font-size: 1.3em;
       width: 500px;
       min-width: 350px;
-      height: 50px;
+      padding: 5px 10px;
       min-height: 30px;
       line-height: 45px;
       color: white;
@@ -119,7 +139,7 @@
   }
   &-info {
     margin: 5px auto;
-    font-size: 18px;
+    font-size: 1.2em;
     color: white;
   }
 }
@@ -130,7 +150,7 @@
 }
 .gl-item {
   width: 400px;
-  height: 325px;
+  max-height: 325px;
   margin-top: 5px;
   cursor: pointer;
   img {
@@ -152,9 +172,9 @@
     margin: 10px 0;
     .btn {
       width: 450px;
-      height: 60px;
+      padding: 5px 10px;
       line-height: 40px;
-      font-size: 18px;
+      font-size: 1.2em;
       color: white;
       &:hover {
         @include btn-hover;
@@ -167,7 +187,7 @@
   background-size: cover;
   background-position: top center;
   color: white;
-  padding-top: 10px;
+  padding: 10px 0;
 }
 .sanatorium__we-wrapper-grafica {
   display: flex;
@@ -200,7 +220,7 @@
     margin-bottom: 15px;
     max-width: 452px;
     img {
-      height: 330px;
+      max-height: 330px;
     }
   }
   &-extra_img {
@@ -221,14 +241,14 @@
     width: calc(100% - 480px);
     .room-name {
       margin-bottom: 50px;
-      font-size: 22px;
+      font-size: 1.4em;
     }
     .room-text {
       text-align: justify;
       margin-bottom: 30px;
     }
     .room-price {
-      font-size: 20px;
+      font-size: 1.3em;
     }
     .room-subprice {
       font-size: 1.1em;
@@ -241,11 +261,11 @@
 }
 .reservation-btn {
   min-width: 40%;
-  min-height: 25%;
+  padding: 5px 10px;
   line-height: 40px;
   margin-top: 20px;
   color: white;
-  font-size: 16px;
+  font-size: 1.1em;
   &:hover {
     transition: 0.5s ease-in-out;
     transform: translateX(7px);
@@ -271,7 +291,7 @@
 }
 .text-title {
   padding-bottom: 10px;
-  font-size: 22px;
+  font-size: 1.3em;
   font-weight: bold;
   border-bottom: 1px solid #e2e2e2;
 }
@@ -282,7 +302,7 @@
       margin-right: 30px;
     }
     .about-item-text {
-      margin-left: 500px;
+      padding-left: 500px;
       margin-right: 0;
     }
   }
@@ -350,3 +370,5 @@
     border-bottom: none;
   }
 }
+
+@import "media";
